[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/player/tile_0000.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/player/tile_0001.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 0.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 8 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 12.0

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 0
script = ExtResource( 2 )
dashHazardMask = 262144

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 2 )
animation = "run"
playing = true

[node name="PickupArea" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -2 )
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2( 0, -10 )
shape = SubResource( 3 )

[node name="HazardArea" type="Area2D" parent="."]
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 327680

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 7.62939e-06, -8 )
shape = SubResource( 1 )

[node name="DashArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea"]
position = Vector2( 7.62939e-06, -12.1403 )
rotation = 1.57079
shape = SubResource( 5 )
disabled = true
